--- a/.env.example
+++ b/.env.example
@@ -66,3 +66,8 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 VITE_APP_NAME="${APP_NAME}"
 
 BOT_TOKEN=
+BOT_ID=
+BOT_USERNAME=
+
+YANDEX_FOLDER_ID=
+YANDEX_IAM_TOKEN=
